--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,8 +12,9 @@
                     <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
                     <ul class="nav navbar-nav">
                         <li><a href="#" th:href="@{/books}">Books</a></li>
-                        <li><a href="#" th:href="@{/book/new}" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">Create Book</a></li>
-                        <li><a href="#" th:href="@{/login?logout}">Log Out</a></li>
+                        <li><a href="#" th:href="@{/book/new}" sec:authorize="hasAnyAuthority('USER','ADMIN')">Create Book</a></li>
+                        <li><a href="#" th:href="@{/users}" sec:authorize="hasAuthority('ADMIN')">Users</a></li>
+                        <li><a href="#" th:href="@{/logout}">Log Out</a></li>
                     </ul>
                 </div>
             </div>
