--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,10 +3,48 @@
 <head>
     <title>Login Form</title>
     <!--/*/ <th:block th:include="fragments/head :: head"></th:block> /*/-->
+    <style>
+        body {
+            padding-top: 15px;
+            font-size: 12px
+        }
+        .main {
+            max-width: 320px;
+            margin: 0 auto;
+        }
+        .login-or {
+            position: relative;
+            font-size: 18px;
+            color: #aaa;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .span-or {
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: -2px;
+            margin-left: -25px;
+            background-color: #fff;
+            width: 50px;
+            text-align: center;
+        }
+        .hr-or {
+            background-color: #cdcdcd;
+            height: 1px;
+            margin-top: 0px !important;
+            margin-bottom: 0px !important;
+        }
+        h3 {
+            text-align: center;
+            line-height: 300%;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
     <div th:if="${param.error}">
         <label style="color:red">Invalid username or password.</label>
     </div>
@@ -16,21 +54,36 @@
         </label>
     </div>
 
-    <form th:action="@{/login}" method="post">
 
-        <table class="table table-striped">
-            <tr>
-                <td><label> User Name : <input type="text" name="username"/> </label></td>
-            </tr>
-            <tr>
-                <td><label> Password : <input type="password" name="password"/> </label></td>
-            </tr>
-            <tr>
-                <td> <button type="submit" class="btn btn-default">Sign In</button></td>
-            </tr>
-        </table>
+        <div class="container">
+            <div class="row">
 
-    </form>
+                <div class="main">
+
+                    <h3>Please Log In, or <a href="/adduser">Sign Up</a></h3>
+                    <div class="login-or">
+                        <hr class="hr-or"/>
+                        <span class="span-or">or</span>
+                    </div>
+
+                    <form th:action="@{/login}" role="form" method="post">
+                        <div class="form-group">
+                            <label for="inputUsernameEmail">Username or email</label>
+                            <input type="text" name="username" class="form-control" id="inputUsernameEmail"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword">Password</label>
+                            <input type="password" name="password" class="form-control" id="inputPassword"/>
+                        </div>
+                        <button type="submit" class="btn btn btn-primary">
+                            Log In
+                        </button>
+                    </form>
+
+                </div>
+
+            </div>
+        </div>
 </div>
 </body>
 </html>
