--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
                             <label for="inputPassword">Password</label>
                             <input type="password" name="password" class="form-control" id="inputPassword"/>
                         </div>
-                        <button type="submit" class="btn btn btn-primary">
+                        <button onclick="window.location.href='/books';" type="submit" class="btn btn btn-primary">
                             Log In
                         </button>
                     </form>
