--- a/src/main/resources/templates/booknew.html
+++ b/src/main/resources/templates/booknew.html
@@ -23,8 +23,11 @@
                     <input type="text" class="form-control" th:field="*{title}"/>
                 </div>
             </div>
+            <input type="hidden" th:value="${session.userId}" name="user" id="user"/>
             <div class="row">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <div class="col-sm-offset-2">
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </div>
             </div>
         </form>
     </div>
