--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,21 +7,32 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
     <div th:if="${not #lists.isEmpty(users)}">
-        <h2>Product List</h2>
-        <table class="table table-striped">
-            <tr>
-                <th>Id</th>
-                <th>Username</th>
-                <th>Delete</th>
-            </tr>
-            <tr th:each="user : ${users}">
-                <td th:text="${user.id}"><a href="/user/${user.id}">Id</a></td>
-                <td th:text="${user.username}">Username</td>
-                <td><a th:href="${'/deleteuser/' + user.id}">Delete</a></td>
-            </tr>
+        <h2>Users</h2>
+        <table id="users">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Username</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="user : ${users}">
+                    <td th:text="${user.id}"><a href="/user/${user.id}">Id</a></td>
+                    <td th:text="${user.username}">Username</td>
+                    <td><a th:href="${'/deleteuser/' + user.id}">Delete</a></td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
 
+<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+<script>
+    $(function(){
+        $("#users").dataTable();
+    })
+</script>
 </body>
 </html>
